--- a/index.html
+++ b/index.html
@@ -35,16 +35,17 @@
         </h2>
         <div class="prj-cards"">
         <div class=" project-title">
-            <img src="./images/tribute.jpg" alt="">
+            <img src="https://i.postimg.cc/8CyT5BVg/tribute.jpg" alt="">
             <div class="prj-link"><a href="#">Tribute Page</a></div>
         </div>
         <div class="project-title">
-            <img src="./images/random-quote-machine.png" alt="">
+            <img src="https://i.postimg.cc/JzxL6c0H/random-quote-machine.png" alt="">
             <div class="prj-link"><a href="#">Random Quote Machine</a></div>
         </div>
         <div class="project-title">
-            <img src="./images/calc.png" alt="">
+            <img src="https://i.postimg.cc/xCPyXX4D/calc.png" alt="">
             <div class="prj-link"><a href="#">Javascript Calculator</a></div>
+        </div>
         </div>
         </div>
     </section>
