--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <div class="prj-link"><a href="#">Tribute Page</a></div>
         </div>
         <div class="project-title">
-            <img src="https://i.postimg.cc/JzxL6c0H/random-quote-machine.png" alt="">
+<!--             <img src="https://i.postimg.cc/JzxL6c0H/random-quote-machine.png" alt=""> -->
+            <img src="random-quote-machine.png" alt="Random quote machine">
             <div class="prj-link"><a href="#">Random Quote Machine</a></div>
         </div>
         <div class="project-title">
