--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="prj-link"><a href="#">Random Quote Machine</a></div>
         </div>
         <div class="project-title">
-            <img src="https://i.postimg.cc/xCPyXX4D/calc.png" alt="">
+            <img src="calc.png" alt="">
             <div class="prj-link"><a href="#">Javascript Calculator</a></div>
         </div>
         </div>
