css stye updated for the social links

--- a/index.html
+++ b/index.html
@@ -59,29 +59,28 @@
         <p>My social media connections</p>
 
         <div class="social-links">
-            <a class="link" href="http://www.facebookcom"><i class="fa-brands fa-facebook"></i>
+            <a class="link" href="http://www.facebookcom"><i class="fa fa-brands fa-facebook"></i>
                 <p>Facebook</p>
             </a>
-            <a class="link" href="http://www.github.com"><i class="fa-brands fa-github"></i>
+            <a class="link" href="http://www.github.com"><i class="fa fa-brands fa-github"></i>
                 <p>GitHub</p>
             </a>
-            <a class="link" href="http://www.twitter.com"><i class="fa-brands fa-square-x-twitter"></i>
+            <a class="link" href="http://www.twitter.com" target="_blank"><i
+                    class="fa fa-brands fa-square-x-twitter"></i>
                 <p>Twitter</p>
             </a>
-            <a class="link" href="mailto:fbkhan2017@gmail.com"><i class="fa-solid fa-square-envelope"></i>
+            <a class="link" href="mailto:fbkhan2017@gmail.com"><i class="fa fa-solid fa-square-envelope"></i>
                 <p>Send a mail</p>
             </a>
         </div>
 
         <form class="subscribe" action="mailto:fbkhan2017@hotmail.com">
-            <label for="email">Subscribe for news letter</label><input type="email" name="email" id="email" autocomplete="off" placeholder="enter email address">
-            <button
-                type="submit"
-                class="btn btn-primary"
-            >
+            <label for="email">Subscribe for news letter</label><input type="email" name="email" id="email"
+                autocomplete="off" placeholder="enter email address">
+            <button type="submit" class="btn btn-primary">
                 Submit
             </button>
-            
+
         </form>
     </div>
     <footer id="footer">
