--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal Portfolio - FreeCodeCamp</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/53b611d2e7.js" crossorigin="anonymous"></script>
 </head>
