--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal portfolio - FreeCodeCamp Prj</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/53b611d2e7.js" crossorigin="anonymous"></script>
 </head>
@@ -31,7 +31,7 @@
     <!-- Project section -->
     <section id="projects">
         <h2 class="prj-heading">
-            There are some of my projects
+           -- There are some of my projects --
         </h2>
         <div class="prj-cards"">
         <div class=" project-title">
